# backend-krakend

./: .env  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
krakend/: Dockerfile
krakend/config/: krakend.json
krakend/plugins/auth-token/: go.mod  go.sum  main.go
krakend/plugins/google-auth/: go.mod  main.go
krakend/plugins/google-code/: go.mod  main.go
