[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.1"

serde_json = "1.0.85"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"